Flex package refactor with PMD fix
SVN-Revision: 2215